Bug 1270051 - x64 assembler support for 64-bit bit counting.  r=bbouvier